avidemo/avidemo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: avi-demo
  name: avi-demo
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: avi-demo
  template:
    metadata:
      labels:
        app: avi-demo
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: avi-demo
          image: harbor.vcloud.pub/library/avidemo:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          resources: {}
