avidemo/avidemo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: avi-demo
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: avi-demo
